SUBDIRS=tmy
etcdir=$(prefix)/etc
tmydir=$(etcdir)/tmy
tmy_DATA=
pkglib_LTLIBRARIES = libclimate.la
libclimate_la_SOURCES = \
	climate.cpp          \
	init.cpp             \
	main.cpp             \
	solar_angles.cpp     \
	test.cpp             \
	climate.h            \
	climate_test.h       \
	solar_angles.h
libclimate_la_LDFLAGS = -version-info 1:0:0

