pkglib_LTLIBRARIES = libcommercial.la
libcommercial_la_SOURCES = \
	hvac.cpp                \
	init.cpp                \
	main.cpp                \
	office.cpp              \
	solvers.cpp             \
	multizone.cpp			\
	hvac.h                  \
	office.h                \
	solvers.h				\
	multizone.h
libcommercial_la_LDFLAGS = -version-info 0:0:0

