pkglib_LTLIBRARIES = libnetwork.la
libnetwork_la_SOURCES = \
	capbank.cpp          \
	check.cpp            \
	export.cpp           \
	fuse.cpp             \
	generator.cpp        \
	globals.c            \
	import.cpp           \
	link.cpp             \
	main.cpp             \
	meter.cpp            \
	network.cpp          \
	node.cpp             \
	regulator.cpp        \
	relay.cpp            \
	transformer.cpp      \
	varmap.c             \
	capbank.h            \
	fuse.h               \
	generator.h          \
	link.h               \
	meter.h              \
	network.h            \
	node.h               \
	regulator.h          \
	relay.h              \
	transformer.h
libnetwork_la_LDFLAGS = -version-info 0:0:0

